Fix hero on ios

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -45,8 +45,6 @@ $black: #2b2523
 .full-width-image
     width: 100vw
     height: 100vh
-    background-size: cover
-    background-position: bottom
     display: flex
     justify-content: center
     align-items: center
